mysecondservice.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysecondservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysecondservice
  template:
    metadata:
      labels:
        app: mysecondservice
    spec:
      containers:
        - name: mysecondservice
          image: sanaa19/cloudprojectimage2:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
      restartPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  name: mysecondservice
spec:
  selector:
    app: mysecondservice
  ports:
    - protocol: TCP
      port: 8081  
      targetPort: 8080
  type: ClusterIP
