myservice.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myservice
  template:
    metadata:
      labels:
        app: myservice
    spec:
      containers:
        - image: sanaa19/cloudproject:latest
          imagePullPolicy: IfNotPresent
          name: myservice
      restartPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  name: myservice
spec:
  ports:
    - nodePort: 31280
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: myservice
  type: NodePort
